@@ -26,6 +26,8 @@ THE HISTORY OF PSYCHOBALL
 	-Added Richard mode
 	-Added Detective mode
 	-Added TILT mode
+	-Added DK mode
+	-Added Konami Code
 -New file that saves your configurations
 	-Saves your last sound control setting when the game is closed
 -Changes on how files are created/read
